master/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecosia
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt-prod    # Specifies the Cluster Issuer to use
  #   acme.cert-manager.io/http01-edit-in-place: "true"  # Tells Cert-Manager to override this ingress temporarily
  #   kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - local.ecosia.org
    secretName: tls-ecosia # Secret name is used to dynamically generate the secret
  rules:
  - host: local.ecosia.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web
            port:
              number: 3000
